--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pabeanfrontend",
   "version": "0.1.0",
-  "homepage": "https://nabilcodes.github.io/pabeanfrontend/",
+  "homepage": "http://nabilcodes.github.io/pabeanfrontend/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
