--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pabeanfrontend",
   "version": "0.1.0",
-  "homepage": "http://nabilcodes.github.io/sign-in/",
+  "homepage": "http://nabilcodes.github.io/pabeanfrontend/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -17,7 +17,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build --cname=nabilcodes.github.io/sign-in/",
+    "deploy": "gh-pages -d build --cname=nabilcodes.github.io/pabeanfrontend/",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
